[ubicloud] Use ubicloud/cache instead of actions/cache in the workflow
We just switched the cache package in the package.json file from
"actions/cache" to "ubicloud/cache".

When we execute `yarn run package`, it simply puts the dependency
packages to the dist directory. This is why the change appears less
clean.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ruby/setup-ruby.git"
+    "url": "git+https://github.com/ubicloud/setup-ruby.git"
   },
   "keywords": [
     "GitHub",
@@ -18,11 +18,11 @@
   "author": "Benoit Daloze",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ruby/setup-ruby/issues"
+    "url": "https://github.com/ubicloud/setup-ruby/issues"
   },
-  "homepage": "https://github.com/ruby/setup-ruby",
+  "homepage": "https://github.com/ubicloud/setup-ruby",
   "dependencies": {
-    "@actions/cache": "^3",
+    "@actions/cache": "npm:@ubicloud/cache@3.2.403",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.2",
